Fixed full screen icon blurry edges.

--- a/src/css/icons/icon-fullscreen.css
+++ b/src/css/icons/icon-fullscreen.css
@@ -1,42 +1,42 @@
 .marka.marka-icon-fullscreen i {
-  -webkit-transform: rotate(45deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  -moz-transform: rotate(45deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  -ms-transform: rotate(45deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  -o-transform: rotate(45deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  transform: rotate(45deg) scale(0.305, 0.10) translate(-46.5%, -246%);
+  -webkit-transform: rotate(45deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  -moz-transform: rotate(45deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  -ms-transform: rotate(45deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  -o-transform: rotate(45deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  transform: rotate(45deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
 }
 .marka.marka-icon-fullscreen i:nth-child(2) {
-  -webkit-transform: rotate(135deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  -moz-transform: rotate(135deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  -ms-transform: rotate(135deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  -o-transform: rotate(135deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  transform: rotate(135deg) scale(0.305, 0.10) translate(-46.5%, 246%);
+  -webkit-transform: rotate(135deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  -moz-transform: rotate(135deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  -ms-transform: rotate(135deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  -o-transform: rotate(135deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  transform: rotate(135deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
 }
 .marka.marka-icon-fullscreen i:nth-child(3) {
-  -webkit-transform: rotate(90deg) scale(0.32, 0.15) translate(-56%, 0%);
-  -moz-transform: rotate(90deg) scale(0.32, 0.15) translate(-56%, 0%);
-  -ms-transform: rotate(90deg) scale(0.32, 0.15) translate(-56%, 0%);
-  -o-transform: rotate(90deg) scale(0.32, 0.15) translate(-56%, 0%);
-  transform: rotate(90deg) scale(0.32, 0.15) translate(-56%, 0%);
+  -webkit-transform: rotate(90deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  -moz-transform: rotate(90deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  -ms-transform: rotate(90deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  -o-transform: rotate(90deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  transform: rotate(90deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
 }
 .marka.marka-icon-fullscreen i:nth-child(4) {
-  -webkit-transform: rotate(225deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  -moz-transform: rotate(225deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  -ms-transform: rotate(225deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  -o-transform: rotate(225deg) scale(0.305, 0.10) translate(-46.5%, -246%);
-  transform: rotate(225deg) scale(0.305, 0.10) translate(-46.5%, -246%);
+  -webkit-transform: rotate(225deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  -moz-transform: rotate(225deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  -ms-transform: rotate(225deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  -o-transform: rotate(225deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
+  transform: rotate(225deg) scale(0.305, 0.10) translate3d(-46.5%, -246%, 0);
 }
 .marka.marka-icon-fullscreen i:nth-child(5) {
-  -webkit-transform: rotate(315deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  -moz-transform: rotate(315deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  -ms-transform: rotate(315deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  -o-transform: rotate(315deg) scale(0.305, 0.10) translate(-46.5%, 246%);
-  transform: rotate(315deg) scale(0.305, 0.10) translate(-46.5%, 246%);
+  -webkit-transform: rotate(315deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  -moz-transform: rotate(315deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  -ms-transform: rotate(315deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  -o-transform: rotate(315deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
+  transform: rotate(315deg) scale(0.305, 0.10) translate3d(-46.5%, 246%, 0);
 }
 .marka.marka-icon-fullscreen i:nth-child(6) {
-  -webkit-transform: rotate(270deg) scale(0.32, 0.15) translate(-56%, 0%);
-  -moz-transform: rotate(270deg) scale(0.32, 0.15) translate(-56%, 0%);
-  -ms-transform: rotate(270deg) scale(0.32, 0.15) translate(-56%, 0%);
-  -o-transform: rotate(270deg) scale(0.32, 0.15) translate(-56%, 0%);
-  transform: rotate(270deg) scale(0.32, 0.15) translate(-56%, 0%);
+  -webkit-transform: rotate(270deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  -moz-transform: rotate(270deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  -ms-transform: rotate(270deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  -o-transform: rotate(270deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
+  transform: rotate(270deg) scale(0.32, 0.15) translate3d(-56%, 0%, 0);
 }
